--- a/index.scss
+++ b/index.scss
@@ -350,6 +350,26 @@ img {
     color: white;
   }
 }
+.arrowHeader2{
+  background-color: #eeae30;
+  border-radius: 12px;
+  padding-top: 3px;
+  padding-bottom: 1px;
+  padding-left: 12px;
+  h6{
+    color: white;
+  }
+}
+
+.arrowHeaderBlock{
+  width: 25%;
+  h2{
+    color: white;
+  }
+  h1{
+    color: white;
+  }
+}
 
 .arrowBlurb{
   p{
